fix: overflow

--- a/components/views/navigation/sidebar/status/Status.less
+++ b/components/views/navigation/sidebar/status/Status.less
@@ -13,11 +13,13 @@
     display: flex;
     align-items: center;
     gap: 8px;
+    max-width: 100%;
 
     svg {
       color: @dark;
       opacity: 0;
       transition: opacity @animation-speed-medium ease;
+      flex-shrink: 0;
     }
 
     &:hover svg {
